--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@
 
 </head>
 <body>
-  <div class="colored-bg">
-
-  </div>
-  <div class="white-bg">
-
+  <div class="bg-container">
+    <div class="colored-bg"></div>
+    <div class="white-bg"></div>
   </div>
   <main class="container">
     <nav>
