added fonts updated background placements

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="colored-bg"></div>
     <div class="white-bg"></div>
   </div>
-  <main class="container">
+  <header>
     <nav>
       <div class="item left">
         <img src="/images/logo.svg" alt="huddle logo - pink speech bubble with the company name beside it">
@@ -41,17 +41,26 @@
         <a href="#">Try It Free</a>
       </div>
     </nav>
+  </header>
+  <main>
     <section>
-      <div class="hero">
-        <img src="/images/hero.svg" alt="image of website with ongoing communication between team members">
-      </div>
+      <img class="hero-img" src="/images/hero.svg" alt="image of website with ongoing communication between team members">
     </section>
     <section>
       <div class="hero-text">
         <h2>Build The Community Your Fans Will Love</h2>
         <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
         Create connections with your users as you engage in genuine discussion.</p>
-      </div
+        <a href="#">Get Started For Free</a>
+      </div>
+    </section>
+    <section>
+      <article>
+        <img src="" alt="">
+      </article>
+      <article>
+
+      </article>
     </section>
   </main>
 </body>
