--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
       </div>
     </nav>
   </header>
-  <main>
-    <section>
+  <main class="half">
+    <section class="hero">
       <img class="hero-img" src="/images/hero.svg" alt="image of website with ongoing communication between team members">
     </section>
-    <section>
+    <section class="hero">
       <div class="hero-text">
         <h2>Build The Community Your Fans Will Love</h2>
         <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
@@ -54,14 +54,30 @@
         <a href="#">Get Started For Free</a>
       </div>
     </section>
-    <section>
-      <article>
-        <img src="" alt="">
-      </article>
-      <article>
-
-      </article>
+  </main>
+  <main class="full">
+    <section class="pitches">
+      <section class="pitch-img">
+        <img src="/images/users.svg" alt="">
+      </section>
+      <section class="pitch-text">
+        <article>
+          <h3>Flowing Conversations</h3>
+          <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
+        </article>
+        <article>
+          <h3>Grow Together</h3>
+          <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
+        </article>
+        <article>
+          <h3>Your Users </h3>
+          <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
+        </article>
+      </section>
     </section>
   </main>
 </body>
 </html>
+
+Try It Free Fully featured 30-day free trial - no credit card required Get Started For Free © Copyright 2019 Huddle. All rights reserved. About Us What We Do FAQ Career Blog Contact Us Subscribe To receive tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address Subscribe
+Challenge by Frontend Mentor. Coded by Your Name Here.
