--- a/index.html
+++ b/index.html
@@ -28,54 +28,56 @@
 
 </head>
 <body>
-  <div class="bg-container">
-    <div class="colored-bg"></div>
-    <div class="white-bg"></div>
+  <div class="container">
+    <div class="bg-container">
+      <div class="colored-bg"></div>
+      <div class="white-bg"></div>
+    </div>
+    <header>
+      <nav>
+        <div class="item left">
+          <img src="/images/logo.svg" alt="huddle logo - pink speech bubble with the company name beside it">
+        </div>
+        <div class="item right">
+          <a href="#">Try It Free</a>
+        </div>
+      </nav>
+    </header>
+    <main class="half">
+      <section class="hero">
+        <img class="hero-img" src="/images/hero.svg" alt="image of website with ongoing communication between team members">
+      </section>
+      <section class="hero">
+        <div class="hero-text">
+          <h2>Build The Community Your Fans Will Love</h2>
+          <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+          Create connections with your users as you engage in genuine discussion.</p>
+          <a href="#">Get Started For Free</a>
+        </div>
+      </section>
+    </main>
+    <main class="full">
+      <section class="pitches">
+        <section class="pitch-img">
+          <img src="/images/users.svg" alt="">
+        </section>
+        <section class="pitch-text">
+          <article>
+            <h3>Flowing Conversations</h3>
+            <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
+          </article>
+          <article>
+            <h3>Grow Together</h3>
+            <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
+          </article>
+          <article>
+            <h3>Your Users </h3>
+            <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
+          </article>
+        </section>
+      </section>
+    </main>
   </div>
-  <header>
-    <nav>
-      <div class="item left">
-        <img src="/images/logo.svg" alt="huddle logo - pink speech bubble with the company name beside it">
-      </div>
-      <div class="item right">
-        <a href="#">Try It Free</a>
-      </div>
-    </nav>
-  </header>
-  <main class="half">
-    <section class="hero">
-      <img class="hero-img" src="/images/hero.svg" alt="image of website with ongoing communication between team members">
-    </section>
-    <section class="hero">
-      <div class="hero-text">
-        <h2>Build The Community Your Fans Will Love</h2>
-        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
-        Create connections with your users as you engage in genuine discussion.</p>
-        <a href="#">Get Started For Free</a>
-      </div>
-    </section>
-  </main>
-  <main class="full">
-    <section class="pitches">
-      <section class="pitch-img">
-        <img src="/images/users.svg" alt="">
-      </section>
-      <section class="pitch-text">
-        <article>
-          <h3>Flowing Conversations</h3>
-          <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
-        </article>
-        <article>
-          <h3>Grow Together</h3>
-          <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
-        </article>
-        <article>
-          <h3>Your Users </h3>
-          <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
-        </article>
-      </section>
-    </section>
-  </main>
 </body>
 </html>
 
