* updated hero text

--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
         </section>
       </section>
     </main>
+    <main class="half">
+      <section class="hero">
+        <div class="call-to-action">
+          <div class="hero-text">
+            <h2>Try It Free</h2>
+            <p>Fully featured 30-day free trial - no credit card required.</p>
+            <a href="#">Get Started For Free</a>
+          </div>
+        </div>
+      </section>
+    </main>
   </div>
 </body>
 </html>
